--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "hammerjs": "^2.0.8",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.12",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "tunnel-ssh": "^4.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
