--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.12",
+    "multer": "^1.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "tunnel-ssh": "^4.1.4",
